add test auth middleware; update testmace env tokens for tests
