# src/MicroFileServer/docs/swagger.json
@@ -41,7 +41,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/files.GetFilesResp"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/file.File"
+                            }
                         }
                     },
                     "401": {
@@ -149,8 +152,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/files.UploadFileResp"
                         }
@@ -354,17 +357,6 @@
                 },
                 "uploadDate": {
                     "type": "string"
-                }
-            }
-        },
-        "files.GetFilesResp": {
-            "type": "object",
-            "properties": {
-                "files": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/file.File"
-                    }
                 }
             }
         },
